Responsive file name lengths for larger screen sizes and with app sidebar. Requires whitespace corrections

--- a/apps/files/css/files.css
+++ b/apps/files/css/files.css
@@ -342,18 +342,30 @@ table td.filename .fileactions span {
 
 @media only screen and (min-width: 1500px) {
 	table td.filename .nametext .innernametext {
-		max-width: 790px;
-	}
-	.with-app-sidebar table td.filename .nametext .innernametext {
-		max-width: 390px;
-	}
-}
-@media only screen and (min-width: 1366px) and (max-width: 1500px) {
-	table td.filename .nametext .innernametext {
 		max-width: 660px;
 	}
 	.with-app-sidebar table td.filename .nametext .innernametext {
-		max-width: 290px;
+		max-width: 300px;
+	}
+        table td.filename .fileactions a span {
+                max-width: 150px;
+        }
+        .with-app-sidebar table td.filename .fileactions a span {
+                max-width: 110px;
+        }
+}
+@media only screen and (min-width: 1366px) and (max-width: 1500px) {
+	table td.filename .nametext .innernametext {
+		max-width: 570px;
+	}
+	.with-app-sidebar table td.filename .nametext .innernametext {
+		max-width: 240px;
+	}
+	table td.filename .fileactions a span {
+		max-width: 115px;
+	}
+	.with-app-sidebar table td.filename .fileactions a span {
+		max-width: 75px;
 	}
 }
 @media only screen and (min-width: 1200px) and (max-width: 1366px) {
@@ -361,10 +373,13 @@ table td.filename .fileactions span {
 		max-width: 400px;
 	}
 	.with-app-sidebar table td.filename .nametext .innernametext {
-		max-width: 230px;
+		max-width: 180px;
 	}
 	table td.filename .fileactions a span {
 		max-width: 115px;
+	}
+        .with-app-sidebar table td.filename .fileactions a span {
+		max-width: 75px;
 	}
 }
 @media only screen and (min-width: 1100px) and (max-width: 1200px) {
@@ -372,10 +387,13 @@ table td.filename .fileactions span {
 		max-width: 300px;
 	}
 	.with-app-sidebar table td.filename .nametext .innernametext {
-		max-width: 230px;
+		max-width: 180px;
 	}
         table td.filename .fileactions a span {
 		max-width: 115px;
+	}
+        .with-app-sidebar table td.filename .fileactions a span {
+		max-width: 75px;
 	}
 }
 @media only screen and (min-width: 1000px) and (max-width: 1100px) {
@@ -383,10 +401,13 @@ table td.filename .fileactions span {
 		max-width: 210px;
 	}
 	.with-app-sidebar table td.filename .nametext .innernametext {
-		max-width: 230px;
+		max-width: 180px;
 	}
         table td.filename .fileactions a span {
 		max-width: 100px;
+	}
+        .with-app-sidebar table td.filename .fileactions a span {
+		max-width: 75px;
 	}
 }
 @media only screen and (min-width: 768px) and (max-width: 1000px) {
@@ -394,7 +415,7 @@ table td.filename .fileactions span {
 		max-width: 180px;
 	}
 	.with-app-sidebar table td.filename .nametext .innernametext {
-		max-width: 230px;
+		max-width: 180px;
 	}
         table td.filename .fileactions a span {
 		max-width: 80px;
